Fabric Platform, new badges and unit tests (#4)
- Fabric Platform

- Made it working in bukkit 1.8.8-1.20.1

- LuckPerms (optional) support

- Added permissions to README.md

- Added a bypass permission

- craftinghomes logic full unit testing

- codecov badge add jacoco reports